# cinema-online

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  init.sql  pyproject.toml
Cinema/: database.py  main.py  tasks.py
Cinema/config/: dependencies.py  settings.py
Cinema/exceptions/: email.py
Cinema/models/: __init__.py  base.py  movies.py  orders.py  payments.py  shopping_cart.py  users.py
Cinema/notifications/: emails.py  interfaces.py
Cinema/routes/: favorites.py  genres.py  movies.py  orders.py  payments.py  profiles.py  shopping_cart.py  stars.py  users.py
Cinema/schemas/: movies.py  orders.py  payments.py  profile.py  profiles.py  shopping_cart.py  users.py
Cinema/security/: http.py  interfaces.py  passwords.py  token_manager.py
Cinema/storages/: interfaces.py  s3.py
Cinema/validation/: profile.py
Cinema/validators/: users.py
alembic/: env.py
commands/: deploy.sh  run_migration.sh
docker/nginx/: .env.sample
src/: database.py  main.py  tasks.py
src/config/: dependencies.py  settings.py
src/exceptions/: security.py
src/migrations/: env.py  seed_user_groups.py
src/models/: __init__.py  movies.py  orders.py  payments.py  shopping_cart.py  users.py
src/notifications/: emails.py
src/routes/: favorites.py  genres.py  movies.py  orders.py  payments.py  profiles.py  shopping_cart.py  stars.py  users.py
src/schemas/: movies.py  payments.py  profiles.py  shopping_cart.py  users.py
src/security/: interfaces.py  token_manager.py
src/storages/: s3.py
src/validation/: profile.py
(+16 files in other folders)
